committing to turn in, will come back and update.

--- a/index.html
+++ b/index.html
@@ -15,21 +15,20 @@
         <nav>
             <ul>
                 <li>    
-                <a href="#home">Home</a>
+                <a href="#home" class= "navBarButtons">Home</a>
             </li>
                 <li>
-                <a href="#projects">Projects</a>
+                <a href="#projects" class= "navBarButtons">Projects</a>
             </li>
             <li> 
-                <a href="#about">About</a>
+                <a href="#about" class= "navBarButtons">About</a>
             </li>
             <li>
-                <a href="#contact">Contact</a>
+                <a href="#contact" class= "navBarButtons">Contact</a>
             </li>
             </ul>
         </nav> 
     </header>
-
 
 
       <section class="homeclass" id="home">
